--- a/src/app/modules/tour-dairy/tour-diary-ro/tour-diary-ro.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-ro/tour-diary-ro.component.html
@@ -34,13 +34,13 @@
                                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                             <mat-label class="customMatLabel">Name of Officer</mat-label>
-                                            <input matInput formControlName="NameOfOfficer" autocomplete="off" readonly="readonly"/>
+                                            <input matInput formControlName="Name" autocomplete="off" readonly="readonly"/>
                                         </mat-form-field>
                                     </div>
                                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                             <mat-label class="customMatLabel">P.P.NO</mat-label>
-                                            <input matInput formControlName="PPNO" autocomplete="off" readonly="readonly"/>
+                                            <input matInput formControlName="Ppno" autocomplete="off" readonly="readonly"/>
                                         </mat-form-field>
                                     </div>
 <!--                                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">-->
@@ -156,9 +156,9 @@
 
                             <div class="row mt-2 mr-1">
                                 <div class="col-lg-12 text-right">
-                                    <button *ngIf="isUpdate==false" class="ml-2 bg-green" mat-raised-button color="primary" (click)="saveTourDiary()"><mat-icon class="mr-2">save</mat-icon>Save</button>
-                                    <button *ngIf="isUpdate==true" class="ml-2 bg-green" mat-raised-button color="primary" (click)="saveTourDiary()"><mat-icon class="mr-2">save</mat-icon>Update</button>
-                                    <button mat-raised-button class="mr-2" color="primary" (click)="SubmitTourDiary()">
+                                    <button *ngIf="isUpdate==false" class="mr-2 bg-green" mat-raised-button color="primary" (click)="saveTourDiary()"><mat-icon class="mr-2">save</mat-icon>Save</button>
+                                    <button *ngIf="isUpdate==true" class="mr-2 bg-green" mat-raised-button color="primary" (click)="saveTourDiary()"><mat-icon class="mr-2">save</mat-icon>Update</button>
+                                    <button mat-raised-button class="mr-2" color="primary" (click)="changeStatus('','S')">
                                         <mat-icon class="mr-2">check_circle</mat-icon>
                                         Submit
                                     </button>
@@ -361,14 +361,14 @@
                 </form>
         </div>
 
-        <div class="row">
-            <div class="col-lg-12 flex  py-2 border-t">
-                <button mat-raised-button class="mr-2" color="primary" (click)="SubmitTourDiary()">
-                    <mat-icon class="mr-2">check_circle</mat-icon>
-                    Submit
-                </button>
-            </div>
-        </div>
+<!--        <div class="row">-->
+<!--            <div class="col-lg-12 flex  py-2 border-t">-->
+<!--                <button mat-raised-button class="mr-2" color="primary" (click)="SubmitTourDiary()">-->
+<!--                    <mat-icon class="mr-2">check_circle</mat-icon>-->
+<!--                    Submit-->
+<!--                </button>-->
+<!--            </div>-->
+<!--        </div>-->
 
 
     </div>
