--- a/src/app/modules/tour-plan/view-tour-plan/view-tour-plan.component.html
+++ b/src/app/modules/tour-plan/view-tour-plan/view-tour-plan.component.html
@@ -57,7 +57,7 @@
                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                 <mat-label>PPNO</mat-label>
-                                <input matInput formControlName="PPNO">
+                                <input appNumberOnly matInput formControlName="PPNO">
                             </mat-form-field>
                         </div>
                     </div>
