--- a/src/app/modules/tour-dairy/tour-diary-bm/tour-diary-bm.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-bm/tour-diary-bm.component.html
@@ -31,7 +31,7 @@
                                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                         <mat-label class="customMatLabel">Name of Officer</mat-label>
                                         <input matInput formControlName="NameOfOfficer" autocomplete="off"
-                                                readonly="readonly"/>
+                                               readonly="readonly"/>
                                     </mat-form-field>
                                 </div>
 
@@ -278,6 +278,15 @@
                                     <th colspan="2" class="border-r border-gray-400">Arrival at</th>
                                     <th colspan="2" class="border-r border-gray-400">Disbursements</th>
                                     <th colspan="2" class="border-r border-gray-400">Recovery</th>
+                                    <th rowspan="2" class="border-r border-gray-400">No. of utilizations checked as per
+                                        quota
+                                    </th>
+                                    <th colspan="2" class="border-r border-gray-400">
+                                        Transfer of Technology
+                                    </th>
+                                    <th rowspan="2" class="border-r border-gray-400">Any other work done</th>
+                                    <th rowspan="2" class="border-r border-gray-400">Remarks</th>
+                                    <th rowspan="2" class="border-r border-gray-400">Actions</th>
                                 </tr>
                                 <tr class="table-header-background text-center">
                                     <th class="border-r border-gray-400">Place</th>
@@ -289,126 +298,120 @@
                                     </th>
                                     <th class="border-r border-gray-400">No. of Defaulters contacted</th>
                                     <th class="border-r border-gray-400">Amount recovered with L.C. No.</th>
-                                </tr>
-                                </thead>
-                                <tbody>
-                                <tr>
-                                    <td class="border-r border-gray-400">
-                                        <mat-form-field class=" mat-form-field-fluid w-full"
-                                                        appearance="outline">
-                                            <input matInput readonly="readonly">
-                                        </mat-form-field>
-                                    </td>
-                                    <td class="border-r border-gray-400">
-                                        <mat-form-field class=" mat-form-field-fluid w-full"
-                                                        appearance="outline">
-                                            <input matInput readonly="readonly">
-                                        </mat-form-field>
-                                    </td>
-                                    <td class="border-r border-gray-400">
-                                        <mat-form-field class=" mat-form-field-fluid w-full"
-                                                        appearance="outline">
-                                            <input matInput readonly="readonly">
-                                        </mat-form-field>
-                                    </td>
-                                    <td class="border-r border-gray-400">
-                                        <mat-form-field class=" mat-form-field-fluid w-full"
-                                                        appearance="outline">
-                                            <input matInput readonly="readonly">
-                                        </mat-form-field>
-                                    </td>
-                                    <td class="border-r border-gray-400">
-                                        <mat-form-field class=" mat-form-field-fluid w-full"
-                                                        appearance="outline">
-                                            <input matInput readonly="readonly">
-                                        </mat-form-field>
-                                    </td>
-                                    <td class="border-r border-gray-400">
-                                        <mat-form-field class=" mat-form-field-fluid w-full"
-                                                        appearance="outline">
-                                            <input matInput readonly="readonly">
-                                        </mat-form-field>
-                                    </td>
-                                    <td class="border-r border-gray-400">
-                                        <mat-form-field class=" mat-form-field-fluid w-full"
-                                                        appearance="outline">
-                                            <input matInput readonly="readonly">
-                                        </mat-form-field>
-                                    </td>
-                                    <td class="border-r border-gray-400">
-                                        <mat-form-field class=" mat-form-field-fluid w-full"
-                                                        appearance="outline">
-                                            <input matInput readonly="readonly">
-                                        </mat-form-field>
-                                    </td>
-                                    <td class="border-r border-gray-400">
-                                        <mat-form-field class=" mat-form-field-fluid w-full"
-                                                        appearance="outline">
-                                            <input matInput readonly="readonly">
-                                        </mat-form-field>
-                                    </td>
-                                </tr>
-
-                                </tbody>
-                            </table>
-
-                        </div>
-
-                        <div class="col-lg-12 p-0 sec-table overflow-auto border shadow-xs rounded-sm bg-gray-50 mt-2">
-                            <table class="table ">
-                                <thead>
-                                <tr class="table-header-background text-center">
-                                    <th rowspan="2" class="border-r border-gray-400">No. of utilizations checked as per
-                                        quota
-                                    </th>
-                                    <th colspan="2" class="border-r border-gray-400">
-                                        Transfer of Technology
-                                    </th>
-                                    <th rowspan="2" class="border-r border-gray-400">Any other work done</th>
-                                    <th rowspan="2" class="border-r border-gray-400">Remarks</th>
-                                </tr>
-                                <tr class="table-header-background text-center">
                                     <th class="border-r border-gray-400">Progressive Farmers contacted</th>
                                     <th class="border-r border-gray-400">No. of farms visited</th>
                                 </tr>
                                 </thead>
                                 <tbody>
-                                <tr>
+                                <tr *ngFor="let single_list of TourDiaryList">
                                     <td class="border-r border-gray-400">
                                         <mat-form-field class=" mat-form-field-fluid w-full"
-                                                        appearance="outline" style="width: 13rem !important">
-                                            <input matInput readonly="readonly">
+                                                        appearance="outline">
+                                            <input matInput readonly="readonly" [value]="single_list?.TourDate">
+                                        </mat-form-field>
+                                    </td>
+                                    <td class="border-r border-gray-400">
+                                        <mat-form-field class=" mat-form-field-fluid w-full"
+                                                        appearance="outline">
+                                            <input matInput readonly="readonly"
+                                                   [value]="single_list?.DepartureFromPlace">
+                                        </mat-form-field>
+                                    </td>
+                                    <td class="border-r border-gray-400">
+                                        <mat-form-field class=" mat-form-field-fluid w-full"
+                                                        appearance="outline">
+                                            <input matInput readonly="readonly"
+                                                   [value]="single_list?.DepartureFromTime">
+                                        </mat-form-field>
+                                    </td>
+                                    <td class="border-r border-gray-400">
+                                        <mat-form-field class=" mat-form-field-fluid w-full"
+                                                        appearance="outline">
+                                            <input matInput readonly="readonly" [value]="single_list?.ArrivalAtPlace">
+                                        </mat-form-field>
+                                    </td>
+                                    <td class="border-r border-gray-400">
+                                        <mat-form-field class=" mat-form-field-fluid w-full"
+                                                        appearance="outline">
+                                            <input matInput readonly="readonly" [value]="single_list?.ArrivalAtTime">
+                                        </mat-form-field>
+                                    </td>
+                                    <td class="border-r border-gray-400">
+                                        <mat-form-field class=" mat-form-field-fluid w-full"
+                                                        appearance="outline">
+                                            <input matInput readonly="readonly"
+                                                   [value]="single_list?.DisbNoOfNewBorrowerContacted">
+                                        </mat-form-field>
+                                    </td>
+                                    <td class="border-r border-gray-400">
+                                        <mat-form-field class=" mat-form-field-fluid w-full"
+                                                        appearance="outline">
+                                            <input matInput readonly="readonly"
+                                                   [value]="single_list?.DisbBorrowerRollOverCasesContacted">
+                                        </mat-form-field>
+                                    </td>
+                                    <td class="border-r border-gray-400">
+                                        <mat-form-field class=" mat-form-field-fluid w-full"
+                                                        appearance="outline">
+                                            <input matInput readonly="readonly"
+                                                   [value]="single_list?.RecNoOfDefaulterContacted">
+                                        </mat-form-field>
+                                    </td>
+                                    <td class="border-r border-gray-400">
+                                        <mat-form-field class=" mat-form-field-fluid w-full"
+                                                        appearance="outline">
+                                            <input matInput readonly="readonly"
+                                                   [value]="single_list?.RecAmountRecoveredWithLCNo">
                                         </mat-form-field>
                                     </td>
                                     <td class="border-r border-gray-400">
                                         <mat-form-field class=" mat-form-field-fluid w-full"
                                                         appearance="outline" style="width: 13rem !important">
-                                            <input matInput readonly="readonly">
+                                            <input matInput readonly="readonly"
+                                                   [value]="single_list?.NoOfUtilizationChecked">
                                         </mat-form-field>
                                     </td>
                                     <td class="border-r border-gray-400">
                                         <mat-form-field class=" mat-form-field-fluid w-full"
                                                         appearance="outline" style="width: 13rem !important">
-                                            <input matInput readonly="readonly">
+                                            <input matInput readonly="readonly"
+                                                   [value]="single_list?.TOTFarmersContacted">
                                         </mat-form-field>
                                     </td>
                                     <td class="border-r border-gray-400">
                                         <mat-form-field class=" mat-form-field-fluid w-full"
                                                         appearance="outline" style="width: 13rem !important">
-                                            <input matInput readonly="readonly">
+                                            <input matInput readonly="readonly"
+                                                   [value]="single_list?.TOTNoOfFarmersVisisted">
                                         </mat-form-field>
                                     </td>
                                     <td class="border-r border-gray-400">
                                         <mat-form-field class=" mat-form-field-fluid w-full"
                                                         appearance="outline" style="width: 13rem !important">
-                                            <input matInput readonly="readonly">
+                                            <input matInput readonly="readonly" [value]="single_list?.AnyOtherWorkDone">
                                         </mat-form-field>
+                                    </td>
+                                    <td class="border-r border-gray-400">
+                                        <mat-form-field class=" mat-form-field-fluid w-full"
+                                                        appearance="outline" style="width: 13rem !important">
+                                            <input matInput readonly="readonly" [value]="single_list?.Remarks">
+                                        </mat-form-field>
+                                    </td>
+                                    <td class="border-r border-gray-400">
+                                        <button mat-icon-button (click)="editData(single_list)">
+                                            <mat-icon>edit</mat-icon>
+                                        </button>
+                                        <button mat-icon-button (click)="deleteData(single_list)">
+                                            <mat-icon>delete</mat-icon>
+                                        </button>
                                     </td>
                                 </tr>
 
                                 </tbody>
                             </table>
+
                         </div>
+
 
                         <div
                             class="col-lg-12 p-0  third-table  overflow-auto border shadow-xs rounded-sm bg-gray-50 mt-2">
@@ -549,37 +552,6 @@
                                 </tbody>
                             </table>
                         </div>
-
-                        <!--                            <div class="col-lg-12">-->
-                        <!--                                <div class="flex" style="flex-wrap: wrap;">-->
-
-                        <!--                                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">-->
-                        <!--                                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">-->
-                        <!--                                            <mat-label class="customMatLabel">Name</mat-label>-->
-                        <!--                                            <input matInput formControlName="Name" autocomplete="off" readonly="readonly"/>-->
-                        <!--                                        </mat-form-field>-->
-                        <!--                                    </div>-->
-                        <!--                                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">-->
-                        <!--                                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">-->
-                        <!--                                            <mat-label class="customMatLabel">Designation</mat-label>-->
-                        <!--                                            <input matInput formControlName="Designation" autocomplete="off" readonly="readonly"/>-->
-                        <!--                                        </mat-form-field>-->
-                        <!--                                    </div>-->
-                        <!--                                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">-->
-                        <!--                                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">-->
-                        <!--                                            <mat-label class="customMatLabel">Date of Visit (ddMMyyyy) <strong class="matMandatory">*</strong>-->
-                        <!--                                            </mat-label>-->
-                        <!--                                            <input matInput [matDatepicker]="picker2" (dateChange)="setDate()" formControlName="Date" maxlength="30" autocomplete="off"-->
-                        <!--                                                   [max]="maxDate" appNumberOnly/>-->
-                        <!--                                            <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>-->
-                        <!--                                            <mat-datepicker #picker2></mat-datepicker>-->
-                        <!--                                        </mat-form-field>-->
-                        <!--                                    </div>-->
-                        <!--                                </div>-->
-
-
-                        <!--                            </div>-->
-
                     </div>
                 </div>
 
