minor change in service

--- a/src/app/modules/tour-dairy/tour-diary-rc/tour-diary-rc.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-rc/tour-diary-rc.component.html
@@ -81,7 +81,7 @@
                                                     Select
                                                 </mat-option>
                                                 <mat-option *ngFor="let obj of TourPlan" [value]="obj.TourPlanId">
-                                                    {{obj.DisbDesc}}
+                                                    {{obj.PurposeName}}
                                                 </mat-option>
                                             </mat-select>
                                         </mat-form-field>
