--- a/src/app/modules/tour-dairy/tour-diary-rc/tour-diary-rc.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-rc/tour-diary-rc.component.html
@@ -132,7 +132,7 @@
                                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                                 <mat-label class="customMatLabel">Arrival Time</mat-label>
-                                                <input type="text" matInput [ngxTimepicker]="timepickerArrival" [format]="DateFormat()" readonly formControlName="DepartureFromTime"/>
+                                                <input type="text" matInput [ngxTimepicker]="timepickerArrival" [format]="DateFormat()" readonly formControlName="ArrivalAtTime"/>
                                                 <mat-icon matSuffix (click)="openFromIcon(timepickerArrival)">schedule</mat-icon>
                                             </mat-form-field>
                                         </div>
