--- a/src/app/modules/tour-dairy/tour-dairy-mco/tour-dairy-mco.component.html
+++ b/src/app/modules/tour-dairy/tour-dairy-mco/tour-dairy-mco.component.html
@@ -572,8 +572,8 @@
                         </button>
 
                     </td>
-                    <td>{{mcoDiary.TourDate}}</td>
-                    <td>{{mcoDiary.TourDate}}</td>
+                    <td>{{dateChange(mcoDiary.TourDate)}}</td>
+                    <td></td>
                     <td>{{mcoDiary.DepartureFromPlace}}</td>
                     <td>{{mcoDiary.DepartureFromTime}}</td>
                     <td>{{mcoDiary.ArrivalAtPlace}}</td>
