--- a/src/app/modules/tour-dairy/tour-dairy-mco/tour-dairy-mco.component.html
+++ b/src/app/modules/tour-dairy/tour-dairy-mco/tour-dairy-mco.component.html
@@ -8,7 +8,7 @@
         </div>
     </div>
 
-    <!--{{MCOModel|json}}-->
+    {{MCOModel|json}}
     <div id="Kt-portlet-margin-top">
         <div class="collapse show" id="collapseExample">
             <div class="kt-form kt-form--group-seperator-dashed">
