--- a/src/app/modules/tour-dairy/tour-diary-pc/tour-diary-pc.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-pc/tour-diary-pc.component.html
@@ -34,7 +34,7 @@
                                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                         <mat-label class="customMatLabel">P.P.NO</mat-label>
-                                        <input matInput formControlName="PPNO" autocomplete="off" readonly="readonly"/>
+                                        <input matInput formControlName="Ppno" autocomplete="off" readonly="readonly"/>
                                     </mat-form-field>
                                 </div>
 
