--- a/src/app/modules/tour-dairy/tour-diary-rc/tour-diary-rc.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-rc/tour-diary-rc.component.html
@@ -65,10 +65,10 @@
 
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                             <mat-label class="customMatLabel">Tour Date</mat-label>
-                                            <input matInput readonly [matDatepicker]="picker2" formControlName="TourDate"
+                                            <input  matInput readonly [matDatepicker]="picker2" formControlName="TourDate"
                                                    maxlength="8"
                                                    autocomplete="off" (dateChange)="setDate()" appNumberOnly/>
-                                            <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
+                                            <mat-datepicker-toggle (click)="checkZone()" [disabled]="!zone" matSuffix [for]="picker2"></mat-datepicker-toggle>
                                             <mat-datepicker #picker2></mat-datepicker>
                                         </mat-form-field>
                                     </div>
@@ -103,7 +103,7 @@
                                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                                 <mat-label class="customMatLabel">Departure Place</mat-label>
-                                                <input matInput formControlName="DepartureFromPlace" autocomplete="off"/>
+                                                <input  matInput formControlName="DepartureFromPlace" autocomplete="off"/>
                                             </mat-form-field>
                                         </div>
 
@@ -145,21 +145,21 @@
                                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                                 <mat-label class="customMatLabel">No. of defaulters contacted</mat-label>
-                                                <input matInput formControlName="NoOfDefaulterContacted" autocomplete="off"/>
+                                                <input appNumberOnly matInput formControlName="NoOfDefaulterContacted" autocomplete="off"/>
                                             </mat-form-field>
                                         </div>
 
                                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                                 <mat-label class="customMatLabel">Results of contacts so made</mat-label>
-                                                <input matInput formControlName="ResultContactMade" autocomplete="off"/>
+                                                <input appNumberOnly matInput formControlName="ResultContactMade" autocomplete="off"/>
                                             </mat-form-field>
                                         </div>
 
                                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                                 <mat-label class="customMatLabel">Measure Boost Up Record</mat-label>
-                                                <input matInput formControlName="MeasureBoostUpRecord" autocomplete="off"/>
+                                                <input appNumberOnly matInput formControlName="MeasureBoostUpRecord" autocomplete="off"/>
                                             </mat-form-field>
                                         </div>
                                     </div>
@@ -171,9 +171,9 @@
 
                             <div class="row mt-2 mr-1">
                                 <div class="col-lg-12 text-right">
-                                    <button *ngIf="isUpdate===false" class="mr-2 bg-green" mat-raised-button color="primary" (click)="saveTourDiary()"><mat-icon class="mr-2">save</mat-icon>Save</button>
-                                    <button *ngIf="isUpdate===true" class="mr-2 bg-green" mat-raised-button color="primary" (click)="saveTourDiary()"><mat-icon class="mr-2">save</mat-icon>Update</button>
-                                    <button mat-raised-button class="mr-2" color="primary" (click)="changeStatus('','S')">
+                                    <button type="button" *ngIf="isUpdate===false" class="mr-2 bg-green" mat-raised-button color="primary" (click)="saveTourDiary()"><mat-icon class="mr-2">save</mat-icon>Save</button>
+                                    <button type="button" *ngIf="isUpdate===true" class="mr-2 bg-green" mat-raised-button color="primary" (click)="saveTourDiary()"><mat-icon class="mr-2">save</mat-icon>Update</button>
+                                    <button type="button" *ngIf="isUpdate===true" mat-raised-button class="mr-2" color="primary" (click)="changeStatus('','S')">
                                         <mat-icon class="mr-2">check_circle</mat-icon>
                                         Submit
                                     </button>
@@ -221,15 +221,15 @@
                                     </tr>
                                     </thead>
                                     <tbody>
-                                    <tr *ngFor="let mcoDiary of TourDiaryList">
+                                    <tr *ngFor="let rcDiary of TourDiaryList">
                                         <td>
-                                            <button class="ml-2" mat-icon-button color="primary" (click)="edit(mcoDiary)"
+                                            <button type="button" class="ml-2" mat-icon-button color="primary" (click)="edit(rcDiary)"
                                             >
                                                 <mat-icon>
                                                     edit
                                                 </mat-icon>
                                             </button>
-                                            <button mat-icon-button (click)="changeStatus(mcoDiary,'C')">
+                                            <button type="button" mat-icon-button (click)="delete(rcDiary,'C')">
                                                 <mat-icon class="text-red-500">
                                                     delete_forever
                                                 </mat-icon>
@@ -237,19 +237,19 @@
 
                                         </td>
                                         <td class="border-r border-gray-400">
-                                            {{mcoDiary.TourDate}}
+                                            {{rcDiary.TourDate}}
                                         </td>
                                         <td class="border-r border-gray-400">
-                                            {{mcoDiary.DepartureFromPlace}}
+                                            {{rcDiary.DepartureFromPlace}}
                                         </td>
                                         <td class="border-r border-gray-400">
-                                            {{mcoDiary.DepartureFromTime}}
+                                            {{rcDiary.DepartureFromTime}}
                                         </td>
                                         <td class="border-r border-gray-400">
-                                            {{mcoDiary.ArrivalAtPlace}}
+                                            {{rcDiary.ArrivalAtPlace}}
                                         </td>
                                         <td class="border-r border-gray-400">
-                                            {{mcoDiary.ArrivalAtTime}}
+                                            {{rcDiary.ArrivalAtTime}}
                                         </td>
                                         <td class="border-r border-gray-400"></td>
                                         <td class="border-r border-gray-400"></td>
@@ -258,10 +258,10 @@
                                         <td class="border-r border-gray-400"></td>
                                         <td class="border-r border-gray-400"></td>
                                         <td class="border-r border-gray-400">
-                                            {{mcoDiary.NoOfDefaulterContacted}}
+                                            {{rcDiary.NoOfDefaulterContacted}}
                                         </td>
                                         <td class="border-r border-gray-400">
-                                            {{mcoDiary.ResultContactMade}}
+                                            {{rcDiary.ResultContactMade}}
                                         </td>
                                     </tr>
                                     </tbody>
